--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:watch":"nodemon src/app.js"
+    "start:watch": "nodemon src/app.js"
   },
-  "type":"module",
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   }
 }
